--- a/stories/DataDisplay/ChipGroup.stories.mdx
+++ b/stories/DataDisplay/ChipGroup.stories.mdx
@@ -3,7 +3,7 @@ import Chip from '@/src/Components/DataDisplay/Chip';
 import ChipGroup from '@/src/Components/DataDisplay/ChipGroup';
 
 <Meta
-    title="DESIGN SYSTEM/DataDisplay/ChipGroup"
+    title="Data Display/ChipGroup"
     component={ ChipGroup, Chip }
     argTypes={{
         size: {
