--- a/stories/DataDisplay/Content.stories.mdx
+++ b/stories/DataDisplay/Content.stories.mdx
@@ -3,7 +3,7 @@ import Content from '@/src/Components/DataDisplay/Content';
 import Button from "@/src/Components/Button/Button";
 
 <Meta
-    title="DESIGN SYSTEM/DataDisplay/Content"
+    title="Data Display/Content"
     component={ Content }
     argTypes={{
          overline: {
