[change] Box 트리구조 반영 (General)

--- a/stories/Box/Box.stories.mdx
+++ b/stories/Box/Box.stories.mdx
@@ -3,7 +3,7 @@ import Box from "@/src/Components/DataDisplay/Box";
 import { colors } from "@/src/Elements/Core/Colors";
 
 <Meta
-  title="DESIGN SYSTEM/Box/Box"
+  title="General/Box"
   component={Box}
   argTypes={{
     label: {
