--- a/stories/Box/Box.stories.mdx
+++ b/stories/Box/Box.stories.mdx
@@ -60,7 +60,7 @@ import { colors } from "@/src/Elements/Core/Colors";
       },
       defaultValue: [16, 16, 16, 16],
     },
-    shadow: {
+    hasShadow: {
       description: "boxShadow 유무",
       table: {
         type: {
@@ -75,7 +75,7 @@ export const Basic = (args, { argTypes }) => ({
   props: Object.keys(argTypes),
   components: { Box },
   template: `<div style="display: flex; justify-content:center; align-items: center; backgroundColor: #F4F5F7; width: 100%; height: 200px;">
-              <Box :has-border="hasBorder" :background-color="backgroundColor" :border-color="borderColor" :paddings="paddings" :shadow="shadow">
+              <Box :has-border="hasBorder" :background-color="backgroundColor" :border-color="borderColor" :paddings="paddings" :has-shadow="hasShadow">
                 <div style="backgroundColor: #F4F5F7;">{{label}}</div>
               </Box>
             </div>`,
