--- a/stories/Button/Button.stories.mdx
+++ b/stories/Button/Button.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
-import Button from "@/src/Components/Button/Button";
+import Button, { buttonSizes, buttonColors, buttonTypes } from "@/src/Components/Button/Button";
 import Icon from "@/src/Elements/Core/Icon/Icon";
 
 <Meta
@@ -10,74 +10,45 @@ import Icon from "@/src/Elements/Core/Icon/Icon";
       description: "버튼에 들어갈 텍스트",
       defaultValue: "버튼",
       control: { type: "text" },
-      table: {
-        type: {
-          summary: null,
-        },
-      },
     },
     size: {
-      description: "버튼의 크기<br/>`String`",
-      table: {
-        type: {
-          summary: "목록",
-          detail: '"small" "medium" "large" "xlarge"',
-        },
-      },
+      description: "버튼의 크기",
       control: {
         type: "select",
-        options: ["small", "medium", "large", "xlarge"],
+        options: buttonSizes,
       },
     },
     color: {
-      description: "버튼의 색상 타입<br/>`String`",
-      table: {
-        type: {
-          summary: "목록",
-          detail: '"primary" "success" "gray" "error"',
-        },
-      },
+      description: "버튼의 색상 타입",
       control: {
         type: "select",
-        options: ["primary", "success", "gray", "error"],
+        options: buttonColors,
       },
     },
     type: {
-      description: "버튼의 타입<br/>`String`",
-      table: {
-        type: {
-          summary: "목록",
-          detail: '"fill" "outlined" "text"',
-        },
-      },
+      description: "버튼의 타입",
       control: {
         type: "select",
-        options: ["fill", "outlined", "text"],
+        options: buttonTypes,
       },
     },
     full: {
-      description: "버튼의 너비가 부모컴포넌트의 100%를 차지할지<br/>`Boolean`",
-      table: {
-        type: {
-          summary: null,
-        },
-      },
+      description: "width: 100%",
     },
     disabled: {
-      description: "버튼의 disabled 상태<br/>`Boolean`",
-      table: {
-        type: {
-          summary: null,
-        },
-      },
+      description: "버튼의 disabled 상태",
     },
     loading: {
-      description: "버튼의 loading 상태<br/>`Boolean`",
-      table: {
-        type: {
-          summary: null,
-        },
-      },
+      description: "버튼의 loading 상태",
+    },
+    fixed: {
+        description: "position: fixed"
+    },
+    absolute: {
+        description: "position: absolute"
+    },
+    shadow: {
+        description: "그림자"
     },
   }}
 />
@@ -86,7 +57,17 @@ export const Default = (args, { argTypes }) => ({
   props: Object.keys(argTypes),
   components: { Button },
   template:
-    `<Button :size="size" :color="color" :type="type" :full="full" :disabled="disabled" :loading="loading">
+    `<Button
+        :size="size"
+        :color="color"
+        :type="type"
+        :full="full"
+        :disabled="disabled"
+        :loading="loading"
+        :absolute="absolute"
+        :fixed="fixed"
+        :shadow="shadow"
+    >
       {{label}}
     </Button>`,
 });
