--- a/stories/DataDisplay/Chip.stories.mdx
+++ b/stories/DataDisplay/Chip.stories.mdx
@@ -2,7 +2,7 @@ import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import Chip from '@/src/Components/DataDisplay/Chip';
 
 <Meta
-    title="Data Display/Chip"
+    title="DESIGN SYSTEM/DataDisplay/Chip"
     component={ Chip }
     argTypes={{
         text: {
