--- a/stories/Box/Box.stories.mdx
+++ b/stories/Box/Box.stories.mdx
@@ -3,7 +3,7 @@ import Box from "@/src/Components/DataDisplay/Box";
 import { colors } from "@/src/Elements/Core/Colors";
 
 <Meta
-  title="DESIGN SYSTEM/Box/Box"
+  title="General/Box"
   component={Box}
   argTypes={{
     label: {
@@ -71,7 +71,7 @@ import { colors } from "@/src/Elements/Core/Colors";
   }}
 />
 
-export const Basic = (args, { argTypes }) => ({
+export const Default = (args, { argTypes }) => ({
   props: Object.keys(argTypes),
   components: { Box },
   template: `<div style="display: flex; justify-content:center; align-items: center; backgroundColor: #F4F5F7; width: 100%; height: 200px;">
@@ -85,11 +85,11 @@ export const Basic = (args, { argTypes }) => ({
 
 **Box** 컴포넌트의 문서입니다.
 
-<Story name="Basic" height="100px">
-  {Basic.bind({})}
+<Story name="Default" height="100px">
+  {Default.bind({})}
 </Story>
 
-<ArgsTable story="Basic" />
+<ArgsTable story="Default" />
 
 ## Stories
 
