[change] 스토리북 컴포넌트들 Meta title 계층 Level2에 맞게 변경

--- a/stories/DataEntry/Checkbox.stories.mdx
+++ b/stories/DataEntry/Checkbox.stories.mdx
@@ -2,7 +2,7 @@ import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import Checkbox from "@/src/Components/DataEntry/Checkbox";
 
 <Meta
-    title="DESIGN SYSTEM/DataEntry/Checkbox"
+    title="Data Entry/Checkbox"
     component={ Checkbox }
     argTypes={{
         label: {
