--- a/stories/DataEntry/Dropdown.stories.mdx
+++ b/stories/DataEntry/Dropdown.stories.mdx
@@ -6,7 +6,7 @@ import Divider from "@/src/Elements/Utility/Divider";
 import Input from "@/src/Components/DataEntry/Input";
 
 <Meta
-    title="DESIGN SYSTEM/DataEntry/Dropdown"
+    title="Data Entry/Dropdown"
     component={ Dropdown }
     argTypes={{
         maxHeight: {
