--- a/stories/Logo/Logo.stories.mdx
+++ b/stories/Logo/Logo.stories.mdx
@@ -2,7 +2,7 @@ import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import Logo from "@/src/Elements/Core/Logo/Logo";
 
 <Meta
-  title="DESIGN SYSTEM/Logo"
+  title="Core/Logo"
   component={ Logo }
   argTypes={{
     name: {
