--- a/stories/Message/Modal/BasicModal.stories.mdx
+++ b/stories/Message/Modal/BasicModal.stories.mdx
@@ -3,7 +3,7 @@ import BasicModal from "@/src/Components/Message/Modal/BasicModal";
 import Button from "@/src/Components/Button/Button";
 
 <Meta
-    title="DESIGN SYSTEM/Message/Modal/BasicModal"
+    title="Message/Modal/BasicModal"
     component={ BasicModal }
     argTypes={{
         show: {
