--- a/stories/Message/Modal/FullscreenModal.stories.mdx
+++ b/stories/Message/Modal/FullscreenModal.stories.mdx
@@ -3,7 +3,7 @@ import FullscreenModal from "@/src/Components/Message/Modal/FullscreenModal";
 import Button from "@/src/Components/Button/Button";
 
 <Meta
-    title="DESIGN SYSTEM/Message/Modal/FullscreenModal"
+    title="Message/Modal/FullscreenModal"
     component={ FullscreenModal }
     argTypes={{
         show: {
