--- a/stories/Message/Modal/WithFormModal.stories.mdx
+++ b/stories/Message/Modal/WithFormModal.stories.mdx
@@ -6,7 +6,7 @@ import Typography from "@/src/Elements/Core/Typography/Typography";
 import InputGroup from "@/src/Components/DataEntry/InputGroup";
 
 <Meta
-    title="DESIGN SYSTEM/Message/Modal/WithFormModal"
+    title="Message/Modal/WithFormModal"
     component={ WithFormModal }
     argTypes={{
         show: {
