--- a/stories/Message/Toast/Toast.stories.mdx
+++ b/stories/Message/Toast/Toast.stories.mdx
@@ -4,7 +4,7 @@ import Button from "@/src/Components/Button/Button";
 import Icon from "@/src/Elements/Core/Icon/Icon";
 
 <Meta
-    title="DESIGN SYSTEM/Message/Toast"
+    title="Message/Toast"
     component={ Toast }
     argTypes={{
         label: {
