--- a/stories/Button/Button.stories.mdx
+++ b/stories/Button/Button.stories.mdx
@@ -3,7 +3,7 @@ import Button from "@/src/Components/Button/Button";
 import Icon from "@/src/Elements/Core/Icon/Icon";
 
 <Meta
-  title="DESIGN SYSTEM/Button/Button"
+  title="General/Button/Button"
   component={ Button }
   argTypes={{
     label: {
