--- a/stories/Callout/Callout.stories.mdx
+++ b/stories/Callout/Callout.stories.mdx
@@ -8,7 +8,7 @@ import {
 import Callout from "@/src/Components/Message/Callout";
 
 <Meta
-  title="Callout"
+  title="Message/Callout"
   component={Callout}
   argTypes={{
     label: {
