--- a/stories/Message/Modal/PermissionModal.stories.mdx
+++ b/stories/Message/Modal/PermissionModal.stories.mdx
@@ -3,7 +3,7 @@ import PermissionModal from "@/src/Components/Message/Modal/PermissionModal";
 import Button from "@/src/Components/Button/Button";
 
 <Meta
-    title="DESIGN SYSTEM/Message/Modal/PermissionModal"
+    title="Message/Modal/PermissionModal"
     component={ PermissionModal }
     argTypes={{
         show: {
