[change] Story name (Basic -> Default)

--- a/stories/Logo/Logo.stories.mdx
+++ b/stories/Logo/Logo.stories.mdx
@@ -31,7 +31,7 @@ import Logo from "@/src/Elements/Core/Logo/Logo";
   }}
 />
 
-export const Basic = (args, { argTypes }) => ({
+export const Default = (args, { argTypes }) => ({
   props: Object.keys(argTypes),
   components: { Logo },
   template:
@@ -42,11 +42,11 @@ export const Basic = (args, { argTypes }) => ({
 
 **Logo** 컴포넌트의 문서입니다.
 
-<Story name="Basic" height="100px">
-  {Basic.bind({})}
+<Story name="Default" height="100px">
+  {Default.bind({})}
 </Story>
 
-<ArgsTable story="Basic" />
+<ArgsTable story="Default" />
 
 ## Stories
 ### All
