--- a/stories/Components/Message/Tooltip.stories.mdx
+++ b/stories/Components/Message/Tooltip.stories.mdx
@@ -18,6 +18,18 @@ import Icon from "@/src/Elements/Core/Icon/Icon";
         options: placements
       },
     },
+    text: {
+      description: "내부 텍스트<br/>`String`",
+      defaultValue: "tooltip text",
+      table: {
+        type: {
+          summary: null,
+        },
+      },
+      control: {
+        type: "text",
+      },
+    },
   }}
 />
 
@@ -28,7 +40,7 @@ export const Default = (args, { argTypes }) => ({
                  <Tooltip :placement="placement">
                      <Icon name="IconProfileLargeFill"></Icon>
                      <template v-slot:popover>
-                           <div>hello</div>
+                           <div>{{ text }}</div>
                      </template>
                  </Tooltip>
              </div>`
