[add] Loader error color 추가

--- a/stories/Components/Other/Loader.stories.mdx
+++ b/stories/Components/Other/Loader.stories.mdx
@@ -75,6 +75,7 @@ export const Default = (args, { argTypes }) => ({
                             <Loader size="small"></Loader>
                             <Loader size="small" color="success"></Loader>
                             <Loader size="small" color="primary"></Loader>
+                            <Loader size="small" color="error"></Loader>
                         </div>
                     </div>
                     <!--medium-->
@@ -84,6 +85,7 @@ export const Default = (args, { argTypes }) => ({
                             <Loader></Loader>
                             <Loader color="success"></Loader>
                             <Loader color="primary"></Loader>
+                            <Loader color="error"></Loader>
                         </div>
                     </div>
                     <!--large-->
@@ -93,6 +95,7 @@ export const Default = (args, { argTypes }) => ({
                             <Loader size="large"></Loader>
                             <Loader size="large" color="success"></Loader>
                             <Loader size="large" color="primary"></Loader>
+                            <Loader size="large" color="error"></Loader>
                         </div>
                     </div>
                 </div>
@@ -104,6 +107,7 @@ export const Default = (args, { argTypes }) => ({
                             <Loader size="small" reversed></Loader>
                             <Loader size="small" color="success" reversed></Loader>
                             <Loader size="small" color="primary" reversed></Loader>
+                            <Loader size="small" color="error" reversed></Loader>
                         </div>
                     </div>
                     <!--medium-->
@@ -113,6 +117,7 @@ export const Default = (args, { argTypes }) => ({
                             <Loader reversed></Loader>
                             <Loader color="success" reversed></Loader>
                             <Loader color="primary" reversed></Loader>
+                            <Loader color="error" reversed></Loader>
                         </div>
                     </div>
                     <!--large-->
@@ -122,6 +127,7 @@ export const Default = (args, { argTypes }) => ({
                             <Loader size="large" reversed></Loader>
                             <Loader size="large" color="success" reversed></Loader>
                             <Loader size="large" color="primary" reversed></Loader>
+                            <Loader size="large" color="error" reversed></Loader>
                         </div>
                     </div>
                 </div>
@@ -166,6 +172,7 @@ export const Default = (args, { argTypes }) => ({
                             <Loader></Loader>
                             <Loader color="primary"></Loader>
                             <Loader color="success"></Loader>
+                            <Loader color="error"></Loader>
                         </div>
                     </div>
                 </div>
@@ -188,6 +195,7 @@ export const Default = (args, { argTypes }) => ({
                             <Loader reversed></Loader>
                             <Loader color="primary" reversed></Loader>
                             <Loader color="success" reversed></Loader>
+                            <Loader color="error" reversed></Loader>
                         </div>
                     </div>
                 </div>
