[change] Tabs types

--- a/stories/DataDisplay/Tabs.stories.mdx
+++ b/stories/DataDisplay/Tabs.stories.mdx
@@ -13,7 +13,7 @@ import Typography from "@/src/Elements/Core/Typography/Typography";
         type: {
             description: "Swiper 사용 여부<br/>String",
             control: {
-                type: "array",
+                type: "select",
                 options: TabsTypes
             },
         },
