[add] overlay 디테일 기능 추가

--- a/stories/Overlay.stories.mdx
+++ b/stories/Overlay.stories.mdx
@@ -1,70 +1,61 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import Overlay from "@/src/Elements/Utility/Overlay";
+import Button from "@/src/Components/Button/Button";
 
 <Meta
   title="Utility/Overlay"
   component={Overlay}
     argTypes={{
+        show: {
+            description: "Overlay 활성화",
+            defaultValue: false,
+            control: {
+                type: "boolean",
+            },
+        },
         type: {
           description: "Overlay 타입 ",
-          table: {
-            type: {
-              summary: "목록",
-              detail: '"dimmer" "content" "bluring"',
-            },
-          },
           control: {
             type: "select",
-            options: ["dimmer", "content", "bluring"],
+            options: ["dimmer"],
           },
+        },
+        persistent: {
+            description: "overlay 클릭해도 모달 닫지 않기",
+            defaultValue: false,
+            control: {
+                type: "boolean",
+            },
+        },
+        zIndex: {
+          description: "zIndex",
+          defaultValue: 9999,
+          control: {
+           type: "text"
+            },
         },
     }}
 />
 
-export const Default = (args, { argTypes }) => ({
+export const Basic = (args, { argTypes }) => ({
   props: Object.keys(argTypes),
-  components: { Overlay },
-  template:
-    `<Overlay :type="type"/>`,
+  components: { Overlay, Button },
+  template: `
+  <div>
+        <Button @click="show = true">Open</Button>
+        <Overlay :show.sync="show"
+                 :type="type"
+                 :persistent="persistent"/>
+    </div>`,
 });
 
 # Overlay
 
 **Overlay** 컴포넌트의 문서입니다.
-<br/>
 
-## Stories
-### All
+<Story name="Basic" height="100px">
+    {Basic.bind({})}
+</Story>
 
-<Canvas>
-    <Story name="All" height="100px">
-        {{
-           	data() {
-           		return {
-           			descriptions: [
-           				{
-           					type: 'shadow1',
-           					content: '툴팁 등에 사용',
-           				},
-           				{
-           					type: 'shadow2',
-           					content: '모바일 카드를 감싼 box 등에 사용',
-           				},
-           				{
-           					type: 'shadow3',
-           					content: 'topbar, header 등에 사용',
-           				},
-           				{
-           					type: 'shadow4',
-           					content: 'xlarge 버튼 등에 사용',
-           				},
-           			],
-           		};
-           	},
-           	template: `<div style="position:relative; height:300px">
-                           <Overlay style="position:absolute"/>
-                       </div>`,
-          components: { Overlay },
-        }}
-    </Story>
-</Canvas>
+<ArgsTable story="Basic" />
+
